<resources>
    <string name="app_name">MyATB</string>
    <string name="register">Реєстрація</string>
    <string name="regist">Ok</string>
    <string name="email">E-mail</string>
    <string name="fristName">Ім\'я</string>
    <string name="secondName">Прізвище</string>
    <string name="phone">Телефон</string>
    <string name="password">Пароль</string>
    <string name="confirmPassword">Відтвердження пароля</string>
    <string name="selectImage">Фото</string>
    <string name="hello">Hi man!</string>
    <string name="login">Авторізация</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>